--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,13 @@
 doctype 5
-html
+html(ng-app="GistBlog")
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='css/style.css')
   body
     block content
+
+    script(src='//code.jquery.com/jquery.min.js')
+    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js')
+    script(src='js/app.js')
+    script(src="js/controllers/post_controller.js")
+
