--- a/frontend/app/views/index.jade
+++ b/frontend/app/views/index.jade
@@ -11,32 +11,14 @@ html(ng-app="GistBlog")
     #content
       #header
         div
-          h1 The Place
+          a(href="/")
+            h1 The Place
 
-      #posts(ng-controller="PostCtrl")
-        .post(ng-repeat="post in posts", id="{{post.id}}")
-          .perma
-            a(ng-href="\#{{ post.id }}")¶
+      div(ng-view)
 
-          .post_body
-            .post_timestamp(ng-bind="post.real_time")
-            .post_title
-              h2(ng-bind="post.description")
-            .post_content(ng-bind-html-unsafe="post.post_content")
-            br
-            // <a class="show_comments" href="#">Show Comments (<%- comments_count %>)</a>
-            .comments
-              .comment(ng-repeat="comment in post.comments")
-                .comment_timestamp(title="{{ comment.real_time }}", ng-bind="comment.human_time")
-                .comment_avatar
-                  a(href="https://github.com/{{ comment.user.login }}")
-                    img(ng-src="{{ comment.user.avatar_url }}")
-                .comment_author
-                  a(href="https://github.com/{{ comment.user.login }}", ng-bind="comment.user.login")
-                .comment_content(ng-bind-html-unsafe="comment.body")
-
-
-    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js')
+    // script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js')
+    script(src='js/lib/angular.js')
     script(src='js/lib/moment.js')
     script(src='js/app.js')
     script(src='js/controllers/post_controller.js')
+    script(src='js/controllers/post_detail_controller.js')
