Header link styles

--- a/frontend/app/views/index.jade
+++ b/frontend/app/views/index.jade
@@ -11,8 +11,7 @@ html(ng-app="GistBlog")
     #content
       #header
         div
-          a(href="/")
-            h1 The Place
+          h1: a(href="/") The Place
 
       div(ng-view)
 
