--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -16,6 +16,11 @@ h1, h2, h3 {
     text-transform: capitalize;
 
     color: #222;
+
+    a {
+        text-decoration: none;
+        color: #222;
+    }
 }
 
 h1 {
